parser.output
Grammar

    0 $accept: program $end

    1 program: comp_decls const_decls var_decls func_decls main_func

    2 main_func: KEYWORD_DEF KEYWORD_MAIN LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON local_decls stmts KEYWORD_ENDDEF SEMICOLON

    3 comp_decls: ε
    4           | comp_decls comp_decl

    5 comp_decl: KEYWORD_COMP IDENTIFIER COLON member_decls method_decls KEYWORD_ENDCOMP SEMICOLON

    6 var_decls: ε
    7          | var_decls var_decl

    8 var_decl: id_list COLON type SEMICOLON

    9 id_list: id_decl
   10        | id_list COMMA id_decl

   11 id_decl: IDENTIFIER
   12        | IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   13        | IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   14        | OP_HASH IDENTIFIER
   15        | OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | OP_HASH IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

   17 func_decls: ε
   18           | func_decls func_decl

   19 func_decl: KEYWORD_DEF IDENTIFIER LEFT_PARENTHESIS param_list_opt RIGHT_PARENTHESIS return_type_decl COLON local_decls stmts return_opt KEYWORD_ENDDEF SEMICOLON

   20 return_type_decl: ε
   21                 | ARROW return_type_opt

   22 param: id_decl COLON type

   23 param_list_opt: ε
   24               | param_list

   25 param_list: param
   26           | param_list COMMA param

   27 local_decls: ε
   28            | local_decls var_decl
   29            | local_decls const_decl

   30 stmts: ε
   31      | stmt stmts

   32 stmt: simple_stmt
   33     | compound_stmt

   34 simple_stmt: assignment_statement
   35            | function_call SEMICOLON
   36            | KEYWORD_BREAK SEMICOLON
   37            | KEYWORD_CONTINUE SEMICOLON
   38            | SEMICOLON

   39 assignment_statement: lvalue OP_ASSIGN expr SEMICOLON
   40                     | lvalue OP_PLUS_ASSIGN expr SEMICOLON
   41                     | lvalue OP_MINUS_ASSIGN expr SEMICOLON
   42                     | lvalue OP_MULT_ASSIGN expr SEMICOLON
   43                     | lvalue OP_DIV_ASSIGN expr SEMICOLON
   44                     | lvalue OP_MOD_ASSIGN expr SEMICOLON

   45 lvalue: IDENTIFIER
   46       | IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   47       | OP_HASH IDENTIFIER
   48       | OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET

   49 compound_stmt: KEYWORD_IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS COLON stmts else_part KEYWORD_ENDIF SEMICOLON
   50              | KEYWORD_WHILE LEFT_PARENTHESIS expr RIGHT_PARENTHESIS COLON stmts KEYWORD_ENDWHILE SEMICOLON
   51              | KEYWORD_FOR IDENTIFIER KEYWORD_IN range_expr COLON stmts KEYWORD_ENDFOR SEMICOLON
   52              | id_decl OP_COLON_ASSIGN LEFT_BRACKET expr KEYWORD_FOR IDENTIFIER COLON expr RIGHT_BRACKET COLON type SEMICOLON
   53              | id_decl OP_COLON_ASSIGN LEFT_BRACKET expr KEYWORD_FOR IDENTIFIER COLON type KEYWORD_IN IDENTIFIER KEYWORD_OF expr RIGHT_BRACKET COLON type SEMICOLON

   54 member_decls: ε
   55             | member_decl_list

   56 member_decl_list: member_decl
   57                 | member_decl_list member_decl

   58 member_decl: id_list COLON type SEMICOLON

   59 method_decls: ε
   60             | method_decls method_decl

   61 method_decl: KEYWORD_DEF IDENTIFIER LEFT_PARENTHESIS param_list_opt RIGHT_PARENTHESIS return_type_decl COLON local_decls stmts return_opt KEYWORD_ENDDEF SEMICOLON

   62 const_decls: ε
   63            | const_decls const_decl

   64 const_decl: KEYWORD_CONST IDENTIFIER OP_ASSIGN literal COLON type SEMICOLON

   65 return_type_opt: ε
   66                | type

   67 return_opt: ε
   68           | KEYWORD_RETURN SEMICOLON
   69           | KEYWORD_RETURN expr SEMICOLON

   70 else_part: ε
   71          | KEYWORD_ELSE COLON stmts

   72 function_call: primary LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS
   73              | primary DOT IDENTIFIER LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS

   74 arg_list_opt: ε
   75             | arg_list

   76 arg_list: expr
   77         | arg_list COMMA expr

   78 expr: logical_expr

   79 logical_expr: relational_expr
   80             | logical_expr OP_AND relational_expr
   81             | logical_expr OP_OR relational_expr

   82 relational_expr: arithmetic_expr
   83                | relational_expr OP_LT arithmetic_expr
   84                | relational_expr OP_LE arithmetic_expr
   85                | relational_expr OP_GT arithmetic_expr
   86                | relational_expr OP_GE arithmetic_expr
   87                | relational_expr OP_EQ arithmetic_expr
   88                | relational_expr OP_NEQ arithmetic_expr

   89 arithmetic_expr: term
   90                | arithmetic_expr OP_PLUS term
   91                | arithmetic_expr OP_MINUS term

   92 term: factor
   93     | term OP_MULT factor
   94     | term OP_DIV factor
   95     | term OP_MOD factor

   96 factor: postfix
   97       | OP_MINUS factor
   98       | OP_NOT factor
   99       | factor OP_POWER postfix

  100 primary: IDENTIFIER
  101        | OP_HASH IDENTIFIER
  102        | literal
  103        | LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

  104 postfix: primary
  105        | postfix LEFT_BRACKET expr RIGHT_BRACKET
  106        | postfix DOT IDENTIFIER
  107        | postfix DOT OP_HASH IDENTIFIER
  108        | postfix LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS

  109 range_expr: LEFT_BRACKET expr COLON expr RIGHT_BRACKET
  110           | LEFT_BRACKET expr COLON expr COLON expr RIGHT_BRACKET

  111 literal: CONST_INT
  112        | CONST_REAL
  113        | CONST_STRING
  114        | BOOL_TRUE
  115        | BOOL_FALSE

  116 type: KEYWORD_INTEGER
  117     | KEYWORD_SCALAR
  118     | KEYWORD_STR
  119     | KEYWORD_BOOL
  120     | KEYWORD_COMP
  121     | IDENTIFIER
  122     | LEFT_BRACKET CONST_INT RIGHT_BRACKET COLON type
  123     | LEFT_BRACKET RIGHT_BRACKET COLON type


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <stringVal> (258) 5 11 12 13 14 15 16 19 45 46 47 48 51 52 53 61 64 73 100 101 106 107 121
    CONST_STRING <stringVal> (259) 113
    CONST_INT <integerVal> (260) 111 122
    CONST_REAL <floatVal> (261) 112
    KEYWORD_SCALAR (262) 117
    KEYWORD_STR <stringVal> (263) 118
    OP_COLON_ASSIGN <stringVal> (264) 52 53
    KEYWORD_INTEGER <integerVal> (265) 116
    KEYWORD_IF (266) 49
    KEYWORD_ELSE (267) 71
    KEYWORD_ENDIF (268) 49
    KEYWORD_WHILE (269) 50
    KEYWORD_ENDWHILE (270) 50
    KEYWORD_FOR (271) 51 52 53
    KEYWORD_IN (272) 51 53
    KEYWORD_ENDFOR (273) 51
    KEYWORD_DEF (274) 2 19 61
    KEYWORD_ENDDEF (275) 2 19 61
    KEYWORD_MAIN (276) 2
    KEYWORD_RETURN (277) 68 69
    KEYWORD_CONST (278) 64
    KEYWORD_COMP (279) 5 120
    KEYWORD_ENDCOMP (280) 5
    KEYWORD_OF (281) 53
    KEYWORD_BOOL (282) 119
    BOOL_TRUE (283) 114
    BOOL_FALSE (284) 115
    KEYWORD_BREAK (285) 36
    KEYWORD_CONTINUE (286) 37
    SEMICOLON (287) 2 5 8 19 35 36 37 38 39 40 41 42 43 44 49 50 51 52 53 58 61 64 68 69
    COLON (288) 2 5 8 19 22 49 50 51 52 53 58 61 64 71 109 110 122 123
    COMMA (289) 10 26 77
    ARROW (290) 21
    OP_HASH (291) 14 15 16 47 48 101 107
    DOT (292) 73 106 107
    LEFT_PARENTHESIS (293) 2 19 49 50 61 72 73 103 108
    RIGHT_PARENTHESIS (294) 2 19 49 50 61 72 73 103 108
    LEFT_BRACKET (295) 12 13 15 16 46 48 52 53 105 109 110 122 123
    RIGHT_BRACKET (296) 12 13 15 16 46 48 52 53 105 109 110 122 123
    OP_POWER (297) 99
    UMINUS (298)
    OP_MULT (299) 93
    OP_DIV (300) 94
    OP_MOD (301) 95
    OP_PLUS (302) 90
    OP_MINUS (303) 91 97
    OP_LT (304) 83
    OP_LE (305) 84
    OP_GT (306) 85
    OP_GE (307) 86
    OP_EQ (308) 87
    OP_NEQ (309) 88
    OP_NOT (310) 98
    OP_AND (311) 80
    OP_OR (312) 81
    OP_ASSIGN (313) 39 64
    OP_PLUS_ASSIGN (314) 40
    OP_MINUS_ASSIGN (315) 41
    OP_MULT_ASSIGN (316) 42
    OP_DIV_ASSIGN (317) 43
    OP_MOD_ASSIGN (318) 44


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    program (65)
        on left: 1
        on right: 0
    main_func (66)
        on left: 2
        on right: 1
    comp_decls (67)
        on left: 3 4
        on right: 1 4
    comp_decl (68)
        on left: 5
        on right: 4
    var_decls (69)
        on left: 6 7
        on right: 1 7
    var_decl (70)
        on left: 8
        on right: 7 28
    id_list (71)
        on left: 9 10
        on right: 8 10 58
    id_decl <stringVal> (72)
        on left: 11 12 13 14 15 16
        on right: 9 10 22 52 53
    func_decls (73)
        on left: 17 18
        on right: 1 18
    func_decl (74)
        on left: 19
        on right: 18
    return_type_decl (75)
        on left: 20 21
        on right: 19 61
    param (76)
        on left: 22
        on right: 25 26
    param_list_opt (77)
        on left: 23 24
        on right: 19 61
    param_list (78)
        on left: 25 26
        on right: 24 26
    local_decls (79)
        on left: 27 28 29
        on right: 2 19 28 29 61
    stmts (80)
        on left: 30 31
        on right: 2 19 31 49 50 51 61 71
    stmt (81)
        on left: 32 33
        on right: 31
    simple_stmt (82)
        on left: 34 35 36 37 38
        on right: 32
    assignment_statement (83)
        on left: 39 40 41 42 43 44
        on right: 34
    lvalue <stringVal> (84)
        on left: 45 46 47 48
        on right: 39 40 41 42 43 44
    compound_stmt (85)
        on left: 49 50 51 52 53
        on right: 33
    member_decls (86)
        on left: 54 55
        on right: 5
    member_decl_list (87)
        on left: 56 57
        on right: 55 57
    member_decl (88)
        on left: 58
        on right: 56 57
    method_decls (89)
        on left: 59 60
        on right: 5 60
    method_decl (90)
        on left: 61
        on right: 60
    const_decls (91)
        on left: 62 63
        on right: 1 63
    const_decl (92)
        on left: 64
        on right: 29 63
    return_type_opt (93)
        on left: 65 66
        on right: 21
    return_opt (94)
        on left: 67 68 69
        on right: 19 61
    else_part (95)
        on left: 70 71
        on right: 49
    function_call <stringVal> (96)
        on left: 72 73
        on right: 35
    arg_list_opt <stringVal> (97)
        on left: 74 75
        on right: 72 73 108
    arg_list <stringVal> (98)
        on left: 76 77
        on right: 75 77
    expr <stringVal> (99)
        on left: 78
        on right: 12 15 39 40 41 42 43 44 46 48 49 50 52 53 69 76 77 103 105 109 110
    logical_expr <stringVal> (100)
        on left: 79 80 81
        on right: 78 80 81
    relational_expr <stringVal> (101)
        on left: 82 83 84 85 86 87 88
        on right: 79 80 81 83 84 85 86 87 88
    arithmetic_expr <stringVal> (102)
        on left: 89 90 91
        on right: 82 83 84 85 86 87 88 90 91
    term <stringVal> (103)
        on left: 92 93 94 95
        on right: 89 90 91 93 94 95
    factor <stringVal> (104)
        on left: 96 97 98 99
        on right: 92 93 94 95 97 98 99
    primary <stringVal> (105)
        on left: 100 101 102 103
        on right: 72 73 104
    postfix <stringVal> (106)
        on left: 104 105 106 107 108
        on right: 96 99 105 106 107 108
    range_expr <stringVal> (107)
        on left: 109 110
        on right: 51
    literal <stringVal> (108)
        on left: 111 112 113 114 115
        on right: 64 102
    type <stringVal> (109)
        on left: 116 117 118 119 120 121 122 123
        on right: 8 22 52 53 58 64 66 122 123


State 0

    0 $accept: • program $end
    1 program: • comp_decls const_decls var_decls func_decls main_func
    3 comp_decls: ε •
    4           | • comp_decls comp_decl

    $default  reduce using rule 3 (comp_decls)

    program     go to state 1
    comp_decls  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: comp_decls • const_decls var_decls func_decls main_func
    4 comp_decls: comp_decls • comp_decl
    5 comp_decl: • KEYWORD_COMP IDENTIFIER COLON member_decls method_decls KEYWORD_ENDCOMP SEMICOLON
   62 const_decls: ε •  [IDENTIFIER, KEYWORD_DEF, KEYWORD_CONST, OP_HASH]
   63            | • const_decls const_decl

    KEYWORD_COMP  shift, and go to state 4

    $default  reduce using rule 62 (const_decls)

    comp_decl    go to state 5
    const_decls  go to state 6


State 3

    0 $accept: program $end •

    $default  accept


State 4

    5 comp_decl: KEYWORD_COMP • IDENTIFIER COLON member_decls method_decls KEYWORD_ENDCOMP SEMICOLON

    IDENTIFIER  shift, and go to state 7


State 5

    4 comp_decls: comp_decls comp_decl •

    $default  reduce using rule 4 (comp_decls)


State 6

    1 program: comp_decls const_decls • var_decls func_decls main_func
    6 var_decls: ε •  [IDENTIFIER, KEYWORD_DEF, OP_HASH]
    7          | • var_decls var_decl
   63 const_decls: const_decls • const_decl
   64 const_decl: • KEYWORD_CONST IDENTIFIER OP_ASSIGN literal COLON type SEMICOLON

    KEYWORD_CONST  shift, and go to state 8

    $default  reduce using rule 6 (var_decls)

    var_decls   go to state 9
    const_decl  go to state 10


State 7

    5 comp_decl: KEYWORD_COMP IDENTIFIER • COLON member_decls method_decls KEYWORD_ENDCOMP SEMICOLON

    COLON  shift, and go to state 11


State 8

   64 const_decl: KEYWORD_CONST • IDENTIFIER OP_ASSIGN literal COLON type SEMICOLON

    IDENTIFIER  shift, and go to state 12


State 9

    1 program: comp_decls const_decls var_decls • func_decls main_func
    7 var_decls: var_decls • var_decl
    8 var_decl: • id_list COLON type SEMICOLON
    9 id_list: • id_decl
   10        | • id_list COMMA id_decl
   11 id_decl: • IDENTIFIER
   12        | • IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   13        | • IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   14        | • OP_HASH IDENTIFIER
   15        | • OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | • OP_HASH IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   17 func_decls: ε •  [KEYWORD_DEF]
   18           | • func_decls func_decl

    IDENTIFIER  shift, and go to state 13
    OP_HASH     shift, and go to state 14

    $default  reduce using rule 17 (func_decls)

    var_decl    go to state 15
    id_list     go to state 16
    id_decl     go to state 17
    func_decls  go to state 18


State 10

   63 const_decls: const_decls const_decl •

    $default  reduce using rule 63 (const_decls)


State 11

    5 comp_decl: KEYWORD_COMP IDENTIFIER COLON • member_decls method_decls KEYWORD_ENDCOMP SEMICOLON
    9 id_list: • id_decl
   10        | • id_list COMMA id_decl
   11 id_decl: • IDENTIFIER
   12        | • IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   13        | • IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   14        | • OP_HASH IDENTIFIER
   15        | • OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | • OP_HASH IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   54 member_decls: ε •  [KEYWORD_DEF, KEYWORD_ENDCOMP]
   55             | • member_decl_list
   56 member_decl_list: • member_decl
   57                 | • member_decl_list member_decl
   58 member_decl: • id_list COLON type SEMICOLON

    IDENTIFIER  shift, and go to state 13
    OP_HASH     shift, and go to state 14

    $default  reduce using rule 54 (member_decls)

    id_list           go to state 19
    id_decl           go to state 17
    member_decls      go to state 20
    member_decl_list  go to state 21
    member_decl       go to state 22


State 12

   64 const_decl: KEYWORD_CONST IDENTIFIER • OP_ASSIGN literal COLON type SEMICOLON

    OP_ASSIGN  shift, and go to state 23


State 13

   11 id_decl: IDENTIFIER •  [COLON, COMMA]
   12        | IDENTIFIER • LEFT_BRACKET expr RIGHT_BRACKET
   13        | IDENTIFIER • LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 24

    $default  reduce using rule 11 (id_decl)


State 14

   14 id_decl: OP_HASH • IDENTIFIER
   15        | OP_HASH • IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | OP_HASH • IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER  shift, and go to state 25


State 15

    7 var_decls: var_decls var_decl •

    $default  reduce using rule 7 (var_decls)


State 16

    8 var_decl: id_list • COLON type SEMICOLON
   10 id_list: id_list • COMMA id_decl

    COLON  shift, and go to state 26
    COMMA  shift, and go to state 27


State 17

    9 id_list: id_decl •

    $default  reduce using rule 9 (id_list)


State 18

    1 program: comp_decls const_decls var_decls func_decls • main_func
    2 main_func: • KEYWORD_DEF KEYWORD_MAIN LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON local_decls stmts KEYWORD_ENDDEF SEMICOLON
   18 func_decls: func_decls • func_decl
   19 func_decl: • KEYWORD_DEF IDENTIFIER LEFT_PARENTHESIS param_list_opt RIGHT_PARENTHESIS return_type_decl COLON local_decls stmts return_opt KEYWORD_ENDDEF SEMICOLON

    KEYWORD_DEF  shift, and go to state 28

    main_func  go to state 29
    func_decl  go to state 30


State 19

   10 id_list: id_list • COMMA id_decl
   58 member_decl: id_list • COLON type SEMICOLON

    COLON  shift, and go to state 31
    COMMA  shift, and go to state 27


State 20

    5 comp_decl: KEYWORD_COMP IDENTIFIER COLON member_decls • method_decls KEYWORD_ENDCOMP SEMICOLON
   59 method_decls: ε •
   60             | • method_decls method_decl

    $default  reduce using rule 59 (method_decls)

    method_decls  go to state 32


State 21

    9 id_list: • id_decl
   10        | • id_list COMMA id_decl
   11 id_decl: • IDENTIFIER
   12        | • IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   13        | • IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   14        | • OP_HASH IDENTIFIER
   15        | • OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | • OP_HASH IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   55 member_decls: member_decl_list •  [KEYWORD_DEF, KEYWORD_ENDCOMP]
   57 member_decl_list: member_decl_list • member_decl
   58 member_decl: • id_list COLON type SEMICOLON

    IDENTIFIER  shift, and go to state 13
    OP_HASH     shift, and go to state 14

    $default  reduce using rule 55 (member_decls)

    id_list      go to state 19
    id_decl      go to state 17
    member_decl  go to state 33


State 22

   56 member_decl_list: member_decl •

    $default  reduce using rule 56 (member_decl_list)


State 23

   64 const_decl: KEYWORD_CONST IDENTIFIER OP_ASSIGN • literal COLON type SEMICOLON
  111 literal: • CONST_INT
  112        | • CONST_REAL
  113        | • CONST_STRING
  114        | • BOOL_TRUE
  115        | • BOOL_FALSE

    CONST_STRING  shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    BOOL_TRUE     shift, and go to state 37
    BOOL_FALSE    shift, and go to state 38

    literal  go to state 39


State 24

   12 id_decl: IDENTIFIER LEFT_BRACKET • expr RIGHT_BRACKET
   13        | IDENTIFIER LEFT_BRACKET • RIGHT_BRACKET
   78 expr: • logical_expr
   79 logical_expr: • relational_expr
   80             | • logical_expr OP_AND relational_expr
   81             | • logical_expr OP_OR relational_expr
   82 relational_expr: • arithmetic_expr
   83                | • relational_expr OP_LT arithmetic_expr
   84                | • relational_expr OP_LE arithmetic_expr
   85                | • relational_expr OP_GT arithmetic_expr
   86                | • relational_expr OP_GE arithmetic_expr
   87                | • relational_expr OP_EQ arithmetic_expr
   88                | • relational_expr OP_NEQ arithmetic_expr
   89 arithmetic_expr: • term
   90                | • arithmetic_expr OP_PLUS term
   91                | • arithmetic_expr OP_MINUS term
   92 term: • factor
   93     | • term OP_MULT factor
   94     | • term OP_DIV factor
   95     | • term OP_MOD factor
   96 factor: • postfix
   97       | • OP_MINUS factor
   98       | • OP_NOT factor
   99       | • factor OP_POWER postfix
  100 primary: • IDENTIFIER
  101        | • OP_HASH IDENTIFIER
  102        | • literal
  103        | • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
  104 postfix: • primary
  105        | • postfix LEFT_BRACKET expr RIGHT_BRACKET
  106        | • postfix DOT IDENTIFIER
  107        | • postfix DOT OP_HASH IDENTIFIER
  108        | • postfix LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS
  111 literal: • CONST_INT
  112        | • CONST_REAL
  113        | • CONST_STRING
  114        | • BOOL_TRUE
  115        | • BOOL_FALSE

    IDENTIFIER        shift, and go to state 40
    CONST_STRING      shift, and go to state 34
    CONST_INT         shift, and go to state 35
    CONST_REAL        shift, and go to state 36
    BOOL_TRUE         shift, and go to state 37
    BOOL_FALSE        shift, and go to state 38
    OP_HASH           shift, and go to state 41
    LEFT_PARENTHESIS  shift, and go to state 42
    RIGHT_BRACKET     shift, and go to state 43
    OP_MINUS          shift, and go to state 44
    OP_NOT            shift, and go to state 45

    expr             go to state 46
    logical_expr     go to state 47
    relational_expr  go to state 48
    arithmetic_expr  go to state 49
    term             go to state 50
    factor           go to state 51
    primary          go to state 52
    postfix          go to state 53
    literal          go to state 54


State 25

   14 id_decl: OP_HASH IDENTIFIER •  [COLON, COMMA]
   15        | OP_HASH IDENTIFIER • LEFT_BRACKET expr RIGHT_BRACKET
   16        | OP_HASH IDENTIFIER • LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 55

    $default  reduce using rule 14 (id_decl)


State 26

    8 var_decl: id_list COLON • type SEMICOLON
  116 type: • KEYWORD_INTEGER
  117     | • KEYWORD_SCALAR
  118     | • KEYWORD_STR
  119     | • KEYWORD_BOOL
  120     | • KEYWORD_COMP
  121     | • IDENTIFIER
  122     | • LEFT_BRACKET CONST_INT RIGHT_BRACKET COLON type
  123     | • LEFT_BRACKET RIGHT_BRACKET COLON type

    IDENTIFIER       shift, and go to state 56
    KEYWORD_SCALAR   shift, and go to state 57
    KEYWORD_STR      shift, and go to state 58
    KEYWORD_INTEGER  shift, and go to state 59
    KEYWORD_COMP     shift, and go to state 60
    KEYWORD_BOOL     shift, and go to state 61
    LEFT_BRACKET     shift, and go to state 62

    type  go to state 63


State 27

   10 id_list: id_list COMMA • id_decl
   11 id_decl: • IDENTIFIER
   12        | • IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   13        | • IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   14        | • OP_HASH IDENTIFIER
   15        | • OP_HASH IDENTIFIER LEFT_BRACKET expr RIGHT_BRACKET
   16        | • OP_HASH IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER  shift, and go to state 13
    OP_HASH     shift, and go to state 14

    id_decl  go to state 64


State 28

    2 main_func: KEYWORD_DEF • KEYWORD_MAIN LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON local_decls stmts KEYWORD_ENDDEF SEMICOLON
   19 func_decl: KEYWORD_DEF • IDENTIFIER LEFT_PARENTHESIS param_list_opt RIGHT_PARENTHESIS return_type_decl COLON local_decls stmts return_opt KEYWORD_ENDDEF SEMICOLON

    IDENTIFIER    shift, and go to state 65
    KEYWORD_MAIN  shift, and go to state 66


State 29

    1 program: comp_decls const_decls var_decls func_decls main_func •

    $default  reduce using rule 1 (program)


State 30

   18 func_decls: func_decls func_decl •

    $default  reduce using rule 18 (func_decls)


State 31

   58 member_decl: id_list COLON • type SEMICOLON
  116 type: • KEYWORD_INTEGER
  117     | • KEYWORD_SCALAR
  118     | • KEYWORD_STR
  119     | • KEYWORD_BOOL
  120     | • KEYWORD_COMP
  121     | • IDENTIFIER
  122     | • LEFT_BRACKET CONST_INT RIGHT_BRACKET COLON type
  123     | • LEFT_BRACKET RIGHT_BRACKET COLON type

    IDENTIFIER       shift, and go to state 56
    KEYWORD_SCALAR   shift, and go to state 57
    KEYWORD_STR      shift, and go to state 58
    KEYWORD_INTEGER  shift, and go to state 59
    KEYWORD_COMP     shift, and go to state 60
    KEYWORD_BOOL     shift, and go to state 61
    LEFT_BRACKET     shift, and go to state 62

    type  go to state 67


State 32

    5 comp_decl: KEYWORD_COMP IDENTIFIER COLON member_decls method_decls • KEYWORD_ENDCOMP SEMICOLON
   60 method_decls: method_decls • method_decl
   61 method_decl: • KEYWORD_DEF IDENTIFIER LEFT_PARENTHESIS param_list_opt RIGHT_PARENTHESIS return_type_decl COLON local_decls stmts return_opt KEYWORD_ENDDEF SEMICOLON

    KEYWORD_DEF      shift, and go to state 68
    KEYWORD_ENDCOMP  shift, and go to state 69

    method_decl  go to state 70


State 33

   57 member_decl_list: member_decl_list member_decl •

    $default  reduce using rule 57 (member_decl_list)


State 34

  113 literal: CONST_STRING •

    $default  reduce using rule 113 (literal)


State 35

  111 literal: CONST_INT •

    $default  reduce using rule 111 (literal)


State 36

  112 literal: CONST_REAL •

    $default  reduce using rule 112 (literal)


State 37

  114 literal: BOOL_TRUE •

    $default  reduce using rule 114 (literal)


State 38

  115 literal: BOOL_FALSE •

    $default  reduce using rule 115 (literal)


State 39

   64 const_decl: KEYWORD_CONST IDENTIFIER OP_ASSIGN literal • COLON type SEMICOLON

    COLON  shift, and go to state 71


State 40

  100 primary: IDENTIFIER •

    $default  reduce using rule 100 (primary)


State 41

  101 primary: OP_HASH • IDENTIFIER

    IDENTIFIER  shift, and go to state 72


State 42

   78 expr: • logical_expr
   79 logical_expr: • relational_expr
   80             | • logical_expr OP_AND relational_expr
   81             | • logical_expr OP_OR relational_expr
   82 relational_expr: • arithmetic_expr
   83                | • relational_expr OP_LT arithmetic_expr
   84                | • relational_expr OP_LE arithmetic_expr
   85                | • relational_expr OP_GT arithmetic_expr
   86                | • relational_expr OP_GE arithmetic_expr
   87                | • relational_expr OP_EQ arithmetic_expr
   88                | • relational_expr OP_NEQ arithmetic_expr
   89 arithmetic_expr: • term
   90                | • arithmetic_expr OP_PLUS term
   91                | • arithmetic_expr OP_MINUS term
   92 term: • factor
   93     | • term OP_MULT factor
   94     | • term OP_DIV factor
   95     | • term OP_MOD factor
   96 factor: • postfix
   97       | • OP_MINUS factor
   98       | • OP_NOT factor
   99       | • factor OP_POWER postfix
  100 primary: • IDENTIFIER
  101        | • OP_HASH IDENTIFIER
  102        | • literal
  103        | • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
  103        | LEFT_PARENTHESIS • expr RIGHT_PARENTHESIS
  104 postfix: • primary
  105        | • postfix LEFT_BRACKET expr RIGHT_BRACKET
  106        | • postfix DOT IDENTIFIER
  107        | • postfix DOT OP_HASH IDENTIFIER
  108        | • postfix LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS
  111 literal: • CONST_INT
  112        | • CONST_REAL
  113        | • CONST_STRING
  114        | • BOOL_TRUE
  115        | • BOOL_FALSE

    IDENTIFIER        shift, and go to state 40
    CONST_STRING      shift, and go to state 34
    CONST_INT         shift, and go to state 35
    CONST_REAL        shift, and go to state 36
    BOOL_TRUE         shift, and go to state 37
    BOOL_FALSE        shift, and go to state 38
    OP_HASH           shift, and go to state 41
    LEFT_PARENTHESIS  shift, and go to state 42
    OP_MINUS          shift, and go to state 44
    OP_NOT            shift, and go to state 45

    expr             go to state 73
    logical_expr     go to state 47
    relational_expr  go to state 48
    arithmetic_expr  go to state 49
    term             go to state 50
    factor           go to state 51
    primary          go to state 52
    postfix          go to state 53
    literal          go to state 54


State 43

   13 id_decl: IDENTIFIER LEFT_BRACKET RIGHT_BRACKET •

    $default  reduce using rule 13 (id_decl)


State 44

   96 factor: • postfix
   97       | • OP_MINUS factor
   97       | OP_MINUS • factor
   98       | • OP_NOT factor
   99       | • factor OP_POWER postfix
  100 primary: • IDENTIFIER
  101        | • OP_HASH IDENTIFIER
  102        | • literal
  103        | • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
  104 postfix: • primary
  105        | • postfix LEFT_BRACKET expr RIGHT_BRACKET
  106        | • postfix DOT IDENTIFIER
  107        | • postfix DOT OP_HASH IDENTIFIER
  108        | • postfix LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS
  111 literal: • CONST_INT
  112        | • CONST_REAL
  113        | • CONST_STRING
  114        | • BOOL_TRUE
  115        | • BOOL_FALSE

    IDENTIFIER        shift, and go to state 40
    CONST_STRING      shift, and go to state 34
    CONST_INT         shift, and go to state 35
    CONST_REAL        shift, and go to state 36
    BOOL_TRUE         shift, and go to state 37
    BOOL_FALSE        shift, and go to state 38
    OP_HASH           shift, and go to state 41
    LEFT_PARENTHESIS  shift, and go to state 42
    OP_MINUS          shift, and go to state 44
    OP_NOT            shift, and go to state 45

    factor   go to state 74
    primary  go to state 52
    postfix  go to state 53
    literal  go to state 54


State 45

   96 factor: • postfix
   97       | • OP_MINUS factor
   98       | • OP_NOT factor
   98       | OP_NOT • factor
   99       | • factor OP_POWER postfix
  100 primary: • IDENTIFIER
  101        | • OP_HASH IDENTIFIER
  102        | • literal
  103        | • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
  104 postfix: • primary
  105        | • postfix LEFT_BRACKET expr RIGHT_BRACKET
  106        | • postfix DOT IDENTIFIER
  107        | • postfix DOT OP_HASH IDENTIFIER
  108        | • postfix LEFT_PARENTHESIS arg_list_opt RIGHT_PARENTHESIS
  111 literal: • CONST_INT
  112        | • CONST_REAL
  113        | • CONST_STRING
  114        | • BOOL_TRUE
  115        | • BOOL_FALSE
